--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,7 +7,7 @@
     --text-body: 18px;
     --border-radius: 8px;
 
-    --green: #00e1ff;
+    --blue: #00e1ff;
 }
 
 * {
@@ -31,12 +31,26 @@ main {
 
 .sidebar {
     background-color: var(--grey-light);
-    width: 20%;
     height: 100%;
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
     padding: 10px;
+    transition: width 0.3s ease;
+}
+
+.sidebar .icon-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+img.icon {
+    width: 40px;
+    filter: brightness(0) invert(1);
+    position: relative;
 }
 
 .sidebar h2 {
@@ -46,7 +60,7 @@ main {
 }
 
 .chat-area {
-    width: 80%;
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -120,3 +134,16 @@ main {
 }
 .inputbox::-webkit-scrollbar-thumb:hover { background: #555; }
 .inputbox::-webkit-scrollbar-track { border-radius: var(--border-radius); }
+
+.quick-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100%;
+}
+
+.prompt-suggestion {
+    font-weight: lighter;
+    font-size: var(--text-title);
+}
