--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -183,8 +183,9 @@ img.icon {
 
 .response-line img.profile-icon {
     width: 40px;
+    height: 40px;
     background-color: var(--grey-light-light);
-    border-radius: 50%;
+    border-radius: 20px;
     padding: 5px;
 }
 
