--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,6 +6,7 @@
     --neon-on-select: #00e1ff80;
     --text-title: 32px;
     --text-body: 18px;
+    --text-response: 22px;
     --border-radius: 8px;
 
     --blue: #00e1ff;
@@ -192,10 +193,12 @@ img.icon {
 .response-line .response-line-text {
     background-color: var(--grey-light-light);
     border-radius: var(--border-radius);
+    font-size: var(--text-response);
     padding: 5px;
     display: flex;
     align-items: center;
     border: 2px solid white;
+    line-height: 1.3;
 }
 
 .response-line-text.error {
