--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -80,6 +80,14 @@ img.icon {
     flex-direction: column;
 }
 
+iframe.page-display {
+    width: 85%;
+    height: 85%;
+    background-color: white;
+    border-radius: 7px;
+    border: 3px solid var(--blue);
+}
+
 .response-area-container {
     height: 85%;
     width: 100%; 
@@ -129,6 +137,7 @@ img.icon {
     border: none;
     width: 7.5%;
     background: transparent;
+    filter: brightness(3) invert(1);
 }
 
 .prompt-submit img {
@@ -179,10 +188,24 @@ img.icon {
     font-size: var(--text-title);
 }
 
-.response-line-container {
+.response-collection {
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
     gap: 20px;
+}
+
+.response-line-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.highlight-text {
+    color: var(--blue);
+    font-size: var(--text-response);
 }
 
 .response-line {
