--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -81,12 +81,27 @@ img.icon {
     flex-direction: column;
 }
 
-iframe.page-display {
+.page-display-wrapper {
     width: 85%;
     height: 85%;
+    position: relative;
+    transition: width 0.3s ease, height 0.3s ease;
+}
+
+iframe.page-display {
+    width: 100%;
+    height: 100%;
     background-color: white;
     border-radius: 7px;
     border: 3px solid var(--blue);
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    filter: invert(18%) sepia(96%) saturate(7497%) hue-rotate(1deg) brightness(96%) contrast(102%);
 }
 
 .response-area-container {
@@ -110,6 +125,7 @@ iframe.page-display {
     transition: box-shadow 0.3s ease;
     resize: none;
     overflow-y: auto;
+    transition: width 0.3s ease, height 0.3s ease;
 }
 
 .response-area:focus {
