--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -208,16 +208,30 @@ iframe.page-display {
 .response-collection {
     display: flex;
     flex-direction: column;
+    align-items: center;
     align-items: flex-start;
     gap: 20px;
 }
 
 .response-line-container {
     display: flex;
-    align-items: center;
+    align-items: left;
     justify-content: center;
     flex-direction: column;
+    width: 100%;
     gap: 10px;
+}
+
+.response-interaction {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+}
+
+.response-interaction .download {
+    width: 25px;
+    user-select: none;
+    filter: brightness(3) invert(1);
 }
 
 .highlight-text {
