--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,7 +37,11 @@ h1 {
     margin-top: 2%;
     font-size: 48px;
     color: var(--white);
+}
 
+h2 {
+    color: var(--white);
+    font-size: 32px;
 }
 
 .sidebar {
@@ -91,7 +95,7 @@ img.icon {
 iframe.page-display {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: var(--white);
     border-radius: 7px;
     border: 3px solid var(--blue);
 }
@@ -102,6 +106,23 @@ iframe.page-display {
     right: 10px;
     width: 50px;
     filter: invert(18%) sepia(96%) saturate(7497%) hue-rotate(1deg) brightness(96%) contrast(102%);
+}
+
+.settings-area {
+    height: 80%;
+    width: 80%; 
+    padding: 15px;
+    border-radius: var(--border-radius);
+    border: none;
+    background-color: var(--grey-light);
+}
+
+.settings-area .option {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 10px;
 }
 
 .response-area-container {
@@ -265,7 +286,7 @@ iframe.page-display {
     padding: 5px;
     display: flex;
     align-items: center;
-    border: 2px solid white;
+    border: 2px solid var(--white);
     line-height: 1.3;
 }
 
